src/styles/pages/endsars.scss
.end-sars {
    .hero {
        height: 100vh;
        background: linear-gradient(358.84deg, rgba(0, 0, 0, 0.9) 10.59%, rgba(82, 82, 82, 0.2) 75.48%);
        position: relative;
    }

    .protesters {
        height: 100%;
        position: relative;
        z-index: -1;
        background-position: 50% 0 !important;

        &::before,
        &::after {
            background-position: 50% 0 !important;
        }
    }

    .content {
        display: flex;
        align-items: center;
        justify-content: center;
        position: absolute;
        top: 50%;
        left: 50%;
        text-transform: uppercase;
        transform: translate(-50%, -10%);
        font-family: $Sang;
        width: 100%;

        @include media("<=700px") {
            font-size: 10px;
        }

        @include media("<=500px") {
            font-size: 7px;
        }

        &-inner {
            display: flex;
            align-items: center;
            justify-content: center;
        }


        .hash {
            color: $yellow;
            margin-right: 40px;
            font-size: 13em;

            @include media("<=500px") {
                margin-right: 20px;
            }
        }

        .flip-text {
            font-size: 4.5em;
            line-height: 1.3;
            color: $white;
        }


    }

    .title-small {
        color: $yellow;
        font-family: $Sang;
        font-size: 2.2em;
        text-align: center;

        @include media("<=500px") {
            font-size: 1.5em;
        }

        @include media("<=400px") {
            font-size: 1.4em;
        }
    }

    .journey {
        background: $black;

        .timeline {
            display: grid;
            grid-template-columns: 1fr 7px 1fr;
            grid-column-gap: 35px;
            padding: 100px 0;


            @include media("<=740px") {
                grid-template-columns: unset;
                grid-column-gap: unset;
            }

            @include media("<=500px") {
                padding-top: 60px;
            }


            &__content {
                margin-bottom: 50px;

                &:not(:last-of-type) {
                    margin-bottom: 280px;

                    @include media("<=740px") {
                        margin-bottom: 60px;
                    }
                }

                @include media("<=740px") {
                    margin-bottom: 60px;
                }
            }

            .mov-2 {
                margin-bottom: 350px;
            }

            .mov-3 {
                margin-bottom: 350px;
            }

            .left {
                margin-top: 280px;

                @include media("<=740px") {
                    margin-top: 0;
                }

                .timeline__content {
                    text-align: right;
                }
            }

            .right {
                margin-top: 20px;

                @include media("<=740px") {
                    margin-top: 0;
                }
            }

            .line {
                width: 7px;
                background: $yellow;

                @include media("<=740px") {
                    display: none;
                }
            }

            .topic {
                text-transform: capitalize;
                font-size: 1.7em;
                color: $yellow;
                font-family: $Sang;
                margin-bottom: 15px;

                @include media("<=800px") {
                    font-size: 1.5em;
                }
            }

            .sub {
                color: $white;
                font-size: 1em;
                line-height: 1.8;
            }
        }

        .timeline.lg-screen {
            @include media("<=740px") {
                display: none;
            }

            .end {
                text-transform: uppercase;
                text-align: left;
            }
        }

        .timeline.mobile {
            display: none;

            @include media("<=740px") {
                display: block;
            }

            .timeline__content {
                &:nth-of-type(2n) {
                    text-align: right;
                }
            }

            .end {
                text-transform: uppercase;
                text-align: center;
            }
        }
    }

    .heroes {
        background: $yellowSec;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;

        .title-small {
            color: $black;
            font-weight: 700;
            margin-bottom: 20px;

            @include media("<=500px") {
                font-size: 1.9em;
            }
        }

        .heroes-img {
            width: 73%;

            @include media("<=tablet") {
                width: 100%;
            }
        }
    }

    .movement {
        background: $black;

        .title-small {
            color: $yellow;
            text-transform: capitalize;
            font-weight: 700;
            margin-bottom: 50px;
        }

        ul {
            margin: 0;
            padding: 0;
            list-style: none;
            display: grid;
            grid-gap: 2rem;
            color: $white;
            justify-content: center;

            li {
                display: flex;
                align-items: center;
                justify-content: center;
                // grid-gap: 1.8em;
                line-height: 1.6;
                font-size: 1.5em;
                font-weight: 500;
                position: relative;

                @include media("<=500px") {
                    line-height: 1.4;
                    font-size: .85em;
                }

                &::before {
                    content: '\2605';
                    // position: absolute;
                    font-size: .8em;
                    margin-top: -2px;
                    margin-right: 20px;

                    @include media("<=500px") {
                        margin-right: 10px;
                    }
                }
            }
        }
    }

    footer {
        background: $yellowSec;
        color: $black;

        path {
            fill: $black;
        }

        .title {
            text-transform: uppercase;
            margin: 20px 0;
        }

        .title-small {
            color: $black;
            font-weight: 700;
        }
    }
}

